change Route api config